--- a/package.json
+++ b/package.json
@@ -17,6 +17,7 @@
     "@tonconnect/sdk": "^2.1.3",
     "@types/express": "^4.17.17",
     "axios": "^1.3.6",
+    "bing-chat": "^0.2.3",
     "cheerio": "^1.0.0-rc.12",
     "dotenv": "^16.0.3",
     "express": "^4.18.2",
