--- a/src/config.ts.template
+++ b/src/config.ts.template
@@ -5,5 +5,6 @@ export const config = {
   newsApiKey: "YOUR_NEWS_API_KEY",
   googleApiKey: "YOUR_GOOGLE_API_KEY",
   googleSearchEngineId: "YOUR_GOOGLE_SEARCH_ENGINE_ID",
-  botToken: "YOUR_TELEGRAM_BOT_TOKEN"
+  botToken: "YOUR_TELEGRAM_BOT_TOKEN",
+  bingAiCookie: "Your '_U' cookie from bing chat"
 };
